fixed the alignment of the input page

--- a/WebContent/CSS/login.css
+++ b/WebContent/CSS/login.css
@@ -28,6 +28,8 @@ input[type=submit]{
 	cursor: pointer;
 	text-align: center;
 	color:#f3f3f3;
+	width:56%;
+	background:white;
     
 	
 }
